--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nathan H. Heller"
+  name             : "Nathan (Nate) Heller"
   avatar           : "profile.png"
   bio              : "PhD Student, Dartmouth College, Psychology and Brain Sciences Department"
   location         : "Hanover, Nh"
