--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nathan (Nate) Heller"
-  avatar           : "profile.png"
+  avatar           : "NatePic4.png"
   bio              : "PhD Student, Dartmouth College, Psychology and Brain Sciences Department"
   location         : "Hanover, Nh"
   employer         :
